--- a/desktop/Wazo/css/main.css
+++ b/desktop/Wazo/css/main.css
@@ -4,8 +4,7 @@ body {
   margin: 0;
 }
 
-.wazo {
-  position: relative;
+#wazo {
   overflow: hidden;
   width: 100%;
   height: 100%;
@@ -15,11 +14,12 @@ body {
   margin: 0;
   transition: transform 0.3s ease-in-out;
   transform: translateX(0);
+  display: grid;
+  height: 100%;
 }
 
 .concept {
-  float: left;
-  height: 100%;
+  display: grid;
   transition: transform 0.0001ms;
   transform: translateY(0);
 }
@@ -31,32 +31,8 @@ body {
   justify-content: center;
   align-items: center;
   padding: 0;
-}
-
-/**
-**Animations
-**/
-@keyframes fadein {
-  0% {
-    opacity: 0;
-  }
-  70% {
-    opacity: 0.9;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes fadeout {
-  0% {
-    opacity: 1;
-  }
-  30% {
-    opacity: 0.2;
-  }
-  100% {
-    opacity: 0;
-  }
+  background: none;
+  grid-area: 1/1/2/2;
 }
 
 /*# sourceMappingURL=main.css.map */
